[package]
name = "bevy_enhanced_input"
version = "0.23.2"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "Alice Cecile <alice.i.cecile@gmail.com>",
]
edition = "2024"
description = "Input manager for Bevy, inspired by Unreal Engine Enhanced Input"
readme = "README.md"
repository = "https://github.com/simgine/bevy_enhanced_input"
keywords = ["bevy", "input"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
include = ["/src", "/LICENSE*"]

[[example]]
name = "keybinding_menu"
required-features = ["serialize"]

[features]
default = ["state"]
serialize = ["bevy/serialize", "dep:serde"]
state = ["bevy/bevy_state"]

[dependencies]
bevy_enhanced_input_macros = { path = "macros", version = "0.23.0" }
bevy = { version = "0.18.0", default-features = false, features = [
  "mouse",
  "keyboard",
  "gamepad",
  "touch",
] }
log = "0.4" # Directly depend on `log` like other `no_std` Bevy crates, since `bevy_log` currently requires `std`.
smallvec = "1.15"
variadics_please = "1.0"
serde = { version = "1.0", default-features = false, features = [
  "derive",
], optional = true }
bitflags = { version = "2.6", default-features = false, features = ["serde"] }

[dev-dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
  "bevy_gilrs",
  "bevy_log",
  "bevy_pbr",
  "bevy_state",
  "bevy_ui_render",
  "bevy_window",
  "default_font",
  "debug",
  "tonemapping_luts",
  "ui_picking",
  "x11",
  "zstd_rust",
] }
test-log = "0.2"
ron = "0.12"

[lints.clippy]
type_complexity = "allow"
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"

[workspace]
members = ["macros"]
